Adding spotless